CRM-19456 - avoid horizontal scrolling
When no-wrap is specified, pages such as the Manage Groups and the
Activities tab will require horizontal scrolling because the
descriptions won't wrap.

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -3270,7 +3270,6 @@ div.m ul#civicrm-menu,
 
 /* in place edit  */
 .crm-container .crm-editable-enabled {
-  white-space: nowrap;
   padding-left: 2px;
   border: 2px dashed transparent;
 }
